When determining mergability of jobs, verify mount type of antennas is not changed
git-svn-id: https://svn.atnf.csiro.au/difx@10412 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/difxio/trunk/ChangeLog
+++ b/libraries/difxio/trunk/ChangeLog
@@ -16,6 +16,7 @@
 * new utility: difxfilelist: read through .input file(s) and list files to be read, data format, ...
 * capture ephemeris file and object number in .calc file
 * new function: DifxInputGetSourceId()
+* when checking equality of antennas, verify mount type is the same
 
 3.6.0
 * Post DiFX 2.5
