parse more of the DAS block
git-svn-id: https://svn.atnf.csiro.au/difx@10414 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/vex2difx/trunk/ChangeLog
+++ b/applications/vex2difx/trunk/ChangeLog
@@ -2,7 +2,7 @@
 Version 2.99.3
 ~~~~~~~~~~~~~~
 * Merge of vex2 branch into trunk, Jan 27, 2022, from revision 10279 of https://svn.atnf.csiro.au/difx/applications/vex2difx/branches/vex2
-* vex2: parse rack and recorder out of DAS block
+* vex2: parse equip, equip_set, and equip_info from $DAS
 * add some sample vex2 files for the VLBA (other groups encouraged to add vex2 samples as well!)
 
 Version 2.99.2
