--- a/applications/vex2difx/trunk/ChangeLog
+++ b/applications/vex2difx/trunk/ChangeLog
@@ -4,6 +4,7 @@ Version 2.99.3
 * Merge of vex2 branch into trunk, Jan 27, 2022, from revision 10279 of https://svn.atnf.csiro.au/difx/applications/vex2difx/branches/vex2
 * vex2: parse equip, equip_set, and equip_info from $DAS
 * add some sample vex2 files for the VLBA (other groups encouraged to add vex2 samples as well!)
+* add option to oms2v2d to override a station format from external file
 
 Version 2.99.2
 ~~~~~~~~~~~~~~
