--- a/libraries/difxio/trunk/ChangeLog
+++ b/libraries/difxio/trunk/ChangeLog
@@ -12,6 +12,7 @@
 * fix incorrect FITS PCal tone freq due rounding error in >1 MHz spacing cases, found by L.Petrov
 * tabulatedelays: allow backing out axis offset effects, allow external file to provide list of MJDs
 * tabulatedelays: option added to print the antenna coordinates as comments in the output
+* tabulatedelays: fix print formatting (missing new lines)
 * read and write J2000 station position polynomials; option in tabulatedelays to evaluate
 * new utility: difxfilelist: read through .input file(s) and list files to be read, data format, ...
 * capture ephemeris file and object number in .calc file
