--- a/applications/polconvert/trunk/src/Changelog
+++ b/applications/polconvert/trunk/src/Changelog
@@ -1,6 +1,14 @@
-v2.0b -- does not apply here, yet
+v2.0b
+- Improved the GCPFF algorithm. Implemented the interface for CASA 6.
 
-v1.9.0 -- does not apply here, yet
+v1.9.0
+- Added new standalone interface (i.e., free of CASA!!!).
+
+v1.8.5
+- interim successor to be tagged in DiFX 2.7(.1)
+- includes the getAmpRatio fix in _PolConvert
+- updates CalTable.* git version to DiFX.
+- a number of refactoring changes not yet included
 
 v1.8.4
 - finishing Py3 conversion with updates to make/configure within DiFX
@@ -10,7 +18,13 @@ v1.8.3
 - interim successor to v1.8.1 for the DiFX branch of PolConvert
 - (1.8.2 was developed on launchpad present with the git repo creation)
 
-v1.8.2 -- does not apply here, yet
+v1.8.2
+- Improved GFF for rate estimates (now, it is done on all corr. products).
+- Parallactic angle can now be corrected in converted antennas.
+- Adapted the pulse-cal code for multi-file correlations.
+- Cleaned up the code.
+- Fixed problem in ChiSq code when the scans weren't in time order.
+- Added sample EU-VGOS scripts.
 
 v1.8.1
 - improved support for FITS-IDI
