vmux: default to non-channel-dependent invalidity
git-svn-id: https://svn.atnf.csiro.au/difx@10448 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/vdifio/trunk/ChangeLog
+++ b/libraries/vdifio/trunk/ChangeLog
@@ -19,6 +19,7 @@ Version 1.5
 * vsum: print data rate
 * vdifspec and vdifd: verified operation on 1-bit and 8-bit data
 * filterVDIF: option to run on many files (Usage 2).
+* vmux: change default to not generating per-channel validity as this could lead to problematic behavior in programs not expecting that kind of output.
 
 Version 1.4
 ~~~~~~~~~~~
