don't stop operation of example programs when too many consecutive validation failures occur.  This can be a normal consequence of data with significant missing packets
git-svn-id: https://svn.atnf.csiro.au/difx@10451 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/mark5access/trunk/ChangeLog
+++ b/libraries/mark5access/trunk/ChangeLog
@@ -11,6 +11,8 @@ Version 1.6
 * m5fold: change all printf() to fprintf(stderr, ) so piping is clean
 * m5fold: allow outfile to be - to imply stdout; this makes output quiet
 * fix possible crash due to blanker operating on invalid data (thanks to Mars Buttfield-Addison)
+* don't stop "example programs" when consecutive errors exceed a threshold.
+* no longer print number of validation failures when closing a mark5_stream
 * Post DiFX-2.6
 
 Version 1.5.4
