Fix logic in populating equivfrequsedbybaseline
git-svn-id: https://svn.atnf.csiro.au/difx@10461 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/mpifxcorr/trunk/ChangeLog
+++ b/mpifxcorr/trunk/ChangeLog
@@ -27,6 +27,7 @@ Version 2.7
 * checkmpifxcorr: option to quiet output if no errors found
 * startdifx: --log-file , --comment-start , and --comment-end options added
 * model.cpp: update to reflect two optional .calc file rows supported by difxio
+* configuration.cpp: fix logic in populating equivfrequsedbybaseline[]
 
 Version 2.6
 ~~~~~~~~~~~
