mk6gather: all screen output to stderr and fail if output file cannot be created
git-svn-id: https://svn.atnf.csiro.au/difx@10465 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/mark6sg/trunk/ChangeLog
+++ b/libraries/mark6sg/trunk/ChangeLog
@@ -8,6 +8,8 @@ Version 2.0.3
   - with this fix, and with the above getMark6GathererFileSize() change, the resultant file sizes should be in accord.
 * mark6Gather() : seeks bigger than NDISK*2^31 were broken.  Now seem fixed.
 * mark6Gather() : operations on Mark6 files that are smaller than a block size seem to work now.
+* mk6gather: fail if output file cannot be created
+* mk6gather: all output goes to stderr to protect piping operation
 
 Version 2.0.2
 * Post DiFX-2.6
