Fix help information for mark5access examples
git-svn-id: https://svn.atnf.csiro.au/difx@10490 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/mark5access/trunk/ChangeLog
+++ b/libraries/mark5access/trunk/ChangeLog
@@ -13,6 +13,7 @@ Version 1.6
 * fix possible crash due to blanker operating on invalid data (thanks to Mars Buttfield-Addison)
 * don't stop "example programs" when consecutive errors exceed a threshold.
 * no longer print number of validation failures when closing a mark5_stream
+* fix help information for the examples
 * Post DiFX-2.6
 
 Version 1.5.4
