--- a/libraries/mark5access/trunk/ChangeLog
+++ b/libraries/mark5access/trunk/ChangeLog
@@ -14,6 +14,16 @@ Version 1.6
 * don't stop "example programs" when consecutive errors exceed a threshold.
 * no longer print number of validation failures when closing a mark5_stream
 * fix help information for the examples
+* add 1, 2 and 4 channel decoders for 16 bit real VDIF
+* add 5, 6, 7, 8, 16 channel decoders for 8 bit real VDIF
+* add 16 channel decoder for 4 bit real VDIF
+* add 3, 5, 6, 7 channel decoders for 2 bit complex VDIF
+* add 3, 5, 6, 7, 16 channel decoders for 4 bit complex VDIF
+* add 3, 5, 6, 7  channel decoders for 8 bit complex VDIF
+* clean up and/or fix some of the (likely yet) unused decoders
+  - some would not increase the input index when blanking
+  - some increased the output index too much
+  - 16 and 32 bit values had errors in converting to signed values
 * Post DiFX-2.6
 
 Version 1.5.4
