--- a/libraries/vdifio/trunk/ChangeLog
+++ b/libraries/vdifio/trunk/ChangeLog
@@ -20,6 +20,13 @@ Version 1.5
 * vdifspec and vdifd: verified operation on 1-bit and 8-bit data
 * filterVDIF: option to run on many files (Usage 2).
 * vmux: change default to not generating per-channel validity as this could lead to problematic behavior in programs not expecting that kind of output.
+* fix bug in testCornerTurn() for nbit > 8
+* Implement all corner turners that might be needed for the VNDA project for up to 16 channels:
+  - New 1-bit corner turners: 9, 10, 11, 12, 13, 14, 15 threads
+  - New 2-bit corner turners: 9, 11, 13, 15 threads
+  - New 4-bit corner turners: 9, 10, 11, 12, 13, 14, 15 threads
+  - New 8-bit corner turners: 9, 11, 13, 15 threads
+  - New 16-bit corner turners: 3, 5, 6, 7, 9, 10, 11, 12, 13, 14, 15 threads
 
 Version 1.4
 ~~~~~~~~~~~
