--- a/libraries/difxmessage/trunk/ChangeLog
+++ b/libraries/difxmessage/trunk/ChangeLog
@@ -1,4 +1,4 @@
-Version 2.7.0
+eersion 2.7.0
 ~~~~~~~~~~~~~
 * Post DiFX-2.6
 * cpumon: clean up end of line
@@ -16,6 +16,7 @@ Version 2.7.0
   - statemon
 * Remove incomplete and not used utility: mk5display
 * Python utilities: multicast receive buffer size to 8000 (from 1500)
+* mk6mon: rewrite; build in support for multislot (>4 slots) Mark6 units
 
 Version 2.6.0
 ~~~~~~~~~~~~~
