--- a/libraries/mark6sg/trunk/TODO
+++ b/libraries/mark6sg/trunk/TODO
@@ -3,3 +3,8 @@
   check that all file headers indicate the same packet size and block size,
   etc)
 
+- Add some means of figuring out an informative "active VSN" to send out in DifxMessageMark6Activity
+  Library does not care about slots but rather uses path patterns, hence supports off-module data
+  copies or unusual on-module layouts also encountered sometimes in practice. These don't necessarily
+  have any .meta dirs with group&VSN infos!
+  -> add iface for a user specified VSN/string?
