add code for parsing the DATA table
git-svn-id: https://svn.atnf.csiro.au/difx@10549 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/python/trunk/ChangeLog
+++ b/libraries/python/trunk/ChangeLog
@@ -1,7 +1,16 @@
+Post DiFX-2.7
+----------------
+* parseDiFX: add parsing of DATA table
+
 1.2
+----------------
 * add difxplot package
+
 1.1
+----------------
 * add difmachines.py
 * add parseDiFX package
+
 1.0 
+-----------------
 * Initial version
