increase string length for observation code
git-svn-id: https://svn.atnf.csiro.au/difx@10552 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/difxio/trunk/ChangeLog
+++ b/libraries/difxio/trunk/ChangeLog
@@ -19,6 +19,7 @@
 * new function: DifxInputGetSourceId()
 * when checking equality of antennas, verify mount type is the same
 * remove polxy2hv from DifxInput structure -- this was effectively a difx2fits private variable that slipped in.
+* increase observation code string length to 24
 
 3.6.0
 * Post DiFX 2.5
