Increase string length for observation code
git-svn-id: https://svn.atnf.csiro.au/difx@10553 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/difx2fits/trunk/ChangeLog
+++ b/applications/difx2fits/trunk/ChangeLog
@@ -16,6 +16,7 @@ Version 3.7.0
     - AIPS FITLD (and later CASA importfitsidi) will not attempt double correction
       - AIPS from Aug 2022 or later is required.
   - When not activated, behavior is unchanged from past versions
+* Increase observation code length to 24
 
 Commit 10003 2021.04.30
 
