--- a/libraries/difxio/trunk/ChangeLog
+++ b/libraries/difxio/trunk/ChangeLog
@@ -13,6 +13,7 @@
 * tabulatedelays: allow backing out axis offset effects, allow external file to provide list of MJDs
 * tabulatedelays: option added to print the antenna coordinates as comments in the output
 * tabulatedelays: fix print formatting (missing new lines)
+* tabulatedelays: in mjdfile mode, allow (by default) printing values between scans, if neighboring scans are on the same source and the model is valid.
 * read and write J2000 station position polynomials; option in tabulatedelays to evaluate
 * new utility: difxfilelist: read through .input file(s) and list files to be read, data format, ...
 * capture ephemeris file and object number in .calc file
