Update prior to 2.8 release.  Also add logic to choose number of frequency and bandwidth digits to print
git-svn-id: https://svn.atnf.csiro.au/difx@10714 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/difxio/trunk/ChangeLog
+++ b/libraries/difxio/trunk/ChangeLog
@@ -21,6 +21,8 @@
 * when checking equality of antennas, verify mount type is the same
 * remove polxy2hv from DifxInput structure -- this was effectively a difx2fits private variable that slipped in.
 * increase observation code string length to 24
+* write FREQ table frequencies only to 1 Hz resolution when it is clear that no additional precision is needed to avoid numerical issues
+* Version for DiFX-2.8, Nov 4, 2022
 
 3.6.0
 * Post DiFX 2.5
