Update prior to 2.8 branching
git-svn-id: https://svn.atnf.csiro.au/difx@10715 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/utilities/trunk/calcif2/ChangeLog
+++ b/utilities/trunk/calcif2/ChangeLog
@@ -1,5 +1,8 @@
 calcif2
 ~~~~~~~
+Version 2.8.0
+* Bump version for DiFX-2.8, Nov 4, 2022
+
 Version 2.7.0
 * Post DiFX-2.6
 * difxvmf : Tool to calculate Vienna Mapping Function and apply to .im file (incomplete as of 20190318)
