--- a/libraries/difxmessage/trunk/ChangeLog
+++ b/libraries/difxmessage/trunk/ChangeLog
@@ -1,3 +1,7 @@
+Version 2.8.0
+~~~~~~~~~~~~~
+* Version bump prior to DIFX-2.8 branching, Nov 4, 2022
+
 Version 2.7.0
 ~~~~~~~~~~~~~
 * Post DiFX-2.6
