--- a/libraries/python/trunk/ChangeLog
+++ b/libraries/python/trunk/ChangeLog
@@ -1,6 +1,8 @@
-Post DiFX-2.7
+1.3
 ----------------
+* Post DiFX-2.7
 * parseDiFX: add parsing of DATA table
+* For DiFX-2.8, Nov 4, 2022
 
 1.2
 ----------------
