Update changelog prior to release
git-svn-id: https://svn.atnf.csiro.au/difx@10721 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/mark6sg/trunk/ChangeLog
+++ b/libraries/mark6sg/trunk/ChangeLog
@@ -10,6 +10,7 @@ Version 2.0.3
 * mark6Gather() : operations on Mark6 files that are smaller than a block size seem to work now.
 * mk6gather: fail if output file cannot be created
 * mk6gather: all output goes to stderr to protect piping operation
+* Version for DiFX-2.8, Nov 4, 2022
 
 Version 2.0.2
 * Post DiFX-2.6
