--- a/libraries/mark6meta/trunk/ChangeLog
+++ b/libraries/mark6meta/trunk/ChangeLog
@@ -2,6 +2,7 @@ Version 0.3
 -----------
 * Post DiFX-2.6
 * ignore non-SAS hotplug add events, such as USB hotplug device
+* Version for DiFX-2.8
 
 Version 0.2
 -----------
