Update changelog prior to DiFX-2.8 branching
git-svn-id: https://svn.atnf.csiro.au/difx@10724 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/dirlist/trunk/ChangeLog
+++ b/libraries/dirlist/trunk/ChangeLog
@@ -1,6 +1,7 @@
 Version 0.2
 -----------
 * Fix rounding in calculating start nanoseconds
+* Version for DiFX-2.8, Nov 4, 2022
 
 Version 0.1
 -----------
