Update changelog prior to DiFX-2.8 branching
git-svn-id: https://svn.atnf.csiro.au/difx@10726 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/calcserver/trunk/ChangeLog
+++ b/applications/calcserver/trunk/ChangeLog
@@ -3,6 +3,7 @@ Version 1.8
 * minor clean-up on the c-side (most compile warnings, dead code removal)
 * support systemd
   - for now, manually copy the calcserver.system file to /etc/systemd/system
+* Version for DifX-2.8, Nov 4, 2022
 
 Version 1.7
 * looks for tirpc via pkgconfig to provide rpc/rpc.h
