Update changelog prior to DiFX-2.8 release
git-svn-id: https://svn.atnf.csiro.au/difx@10727 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/difx2fits/trunk/ChangeLog
+++ b/applications/difx2fits/trunk/ChangeLog
@@ -18,6 +18,7 @@ Version 3.7.0
   - When not activated, behavior is unchanged from past versions
 * Increase observation code length to 24
 * makefits: a few minor changes requested by VLBA analysts
+* Version for DiFX-2.8, Nov 4, 2022
 
 Commit 10003 2021.04.30
 
