Update changelog prior to DiFX-2.8 release
git-svn-id: https://svn.atnf.csiro.au/difx@10728 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/difx2mark4/trunk/ChangeLog
+++ b/applications/difx2mark4/trunk/ChangeLog
@@ -1,5 +1,8 @@
+Version 1.7
+~~~~~~~~~~~
 * rjc 2020.6.26
 * fix parallactic angle bug in first t303 record
+* Version for DiFX-2.8, Nov 4, 2022
 
 Version 1.6
 ~~~~~~~~~~~
