Update Changelog for DiFX-2.8
git-svn-id: https://svn.atnf.csiro.au/difx@10732 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/difxcalc11/trunk/ChangeLog
+++ b/applications/difxcalc11/trunk/ChangeLog
@@ -3,6 +3,7 @@
 * Allow to build outside the DiFX environment
 * Add option to print the station ITRF positions to .im file
   - these include EOP, earth deformation, axis offset
+* Version for DiFX-2.8, Nov 4, 2022
 
 11.0.2
 ------
