--- a/applications/difxfilterbank/trunk/ChangeLog
+++ b/applications/difxfilterbank/trunk/ChangeLog
@@ -1,3 +1,8 @@
+Version 0.7
+~~~~~~~~~~~
+* Updated required library versions for DiFX-2.8
+* Version for DiFX-2.8
+
 Version 0.6
 ~~~~~~~~~~~
 * Version for DiFX-2.4, Nov 4, 2014
