--- a/applications/polconvert/trunk/ChangeLog
+++ b/applications/polconvert/trunk/ChangeLog
@@ -3,6 +3,7 @@ See src/Changelog for further information.
 Version 2.0
 ~~~~~~~~~~~
 release 2.0.3 synchronized buildables with non-ALMA case; Jul 15, 2022
+Version 2.0.3 is for DiFX-2.8, Nov 4, 2022
 
 Version 1.8
 ~~~~~~~~~~~
