Add --scanfreqs option to vexpeek
git-svn-id: https://svn.atnf.csiro.au/difx@10851 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/vex2difx/trunk/ChangeLog
+++ b/applications/vex2difx/trunk/ChangeLog
@@ -1,6 +1,7 @@
 Version 3.0.0
 -------------
 * Version bump prior to DiFX 2.8 branching
+* vexpeek: --scanfreqs option
 
 Version 2.99.3
 ~~~~~~~~~~~~~~
