--- a/libraries/difxio/trunk/ChangeLog
+++ b/libraries/difxio/trunk/ChangeLog
@@ -1,3 +1,7 @@
+3.8.0
+* Post DiFX 2.8
+* New function DifxInputGetMaxDatastreamsPerAntenna()
+
 3.7.0
 * Post DiFX 2.6
 * Add new column to antenna database: ivsName: the name used by IVS
