--- a/applications/difx2fits/trunk/ChangeLog
+++ b/applications/difx2fits/trunk/ChangeLog
@@ -1,3 +1,7 @@
+Version 3.8.0
+* Post DiFX-2.8
+* Remove restrictions on max number of datastreams
+* Fix some possible memory leaks in cases where there are sometimes no pulse call tones.
 
 Version 3.7.0
 * Post DiFX-2.6
