--- a/libraries/vdifio/trunk/ChangeLog
+++ b/libraries/vdifio/trunk/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.6
+~~~~~~~~~~~
+* Post DiFX-2.8
+* vdifbstate: add option to look at only even or odd samples
+
 Version 1.5
 ~~~~~~~~~~~
 * Post DiFX-2.6
