--- a/libraries/difxio/trunk/ChangeLog
+++ b/libraries/difxio/trunk/ChangeLog
@@ -1,6 +1,7 @@
 3.8.0
 * Post DiFX 2.8
 * New function DifxInputGetMaxDatastreamsPerAntenna()
+* Add all VLA pads to antenna list
 
 3.7.0
 * Post DiFX 2.6
