more MPI, script to generate filelists
git-svn-id: https://svn.atnf.csiro.au/difx@10906 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/utilities/trunk/vdifsim/TODO
+++ b/utilities/trunk/vdifsim/TODO
@@ -1,7 +1,5 @@
 TODO
 
-* Create new DiFX repo for this: vdifsim
-
 * Parameterize a few things / couple with options:
   x SEFD
   - Default source brightness
@@ -20,18 +18,22 @@ TODO
 
 * Integrate with difxmessage?
 
+* Add polarization leakage
+
 
 STRETCH GOALS
-
-* integrate with MPI
-  - option 1: simply parallelize across .input files
-  - option 2: divide up time range and combine VDIFs at end
 
 * multi-phase-center -> source with structure
 
 * SEFD depends on elevation
 
+
 RESOLVED ISSUES
+
+X integrate with MPI
+  - option 1: simply parallelize across .input files
+
+X Create new DiFX repo for this: vdifsim
 
 X Resolve phase/delay drift issue  (~10ns on long baselines)
 
