--- a/utilities/trunk/vdifsim/TODO
+++ b/utilities/trunk/vdifsim/TODO
@@ -7,8 +7,11 @@ TODO
 
 * Spectrum model: 
   x shaped broadband noise
-  ... tones (with appropriate doppler)
+  x simple tone
+  - Interpolate tone for more precision
   - PNR
+
+* Doppler shift signal
 
 * Consider horizon
 
@@ -19,6 +22,13 @@ TODO
 * Integrate with difxmessage?
 
 * Add polarization leakage
+
+* Update config file format
+  - Top level config
+    - ?
+  - Source ID (phase center number) sectioning
+  - Antenna sectioning
+    - Add antenna-based delay errors
 
 
 STRETCH GOALS
