--- a/mpifxcorr/trunk/ChangeLog
+++ b/mpifxcorr/trunk/ChangeLog
@@ -1,3 +1,8 @@
+Version 2.9
+~~~~~~~~~~~
+* Fix missing/broken autocorrelations (ported to DiFX 2.8)
+
+
 Version 2.8
 ~~~~~~~~~~~
 * Version for DiFX-2.8
