--- a/applications/vex2difx/trunk/ChangeLog
+++ b/applications/vex2difx/trunk/ChangeLog
@@ -1,3 +1,7 @@
+Version 3.0.1
+-------------
+* Fix for datastream to antenna mapping when not sorting antennas
+
 Version 3.0.0
 -------------
 * Version bump prior to DiFX 2.8 branching
