--- a/mpifxcorr/trunk/ChangeLog
+++ b/mpifxcorr/trunk/ChangeLog
@@ -1,6 +1,7 @@
 Version 2.9
 ~~~~~~~~~~~
 * Fix missing/broken autocorrelations (ported to DiFX 2.8)
+* Fix for cross-polar autocorrelation weights (ported to DiFX 2.8)
 
 
 Version 2.8
