Starting some antenna configuration options
git-svn-id: https://svn.atnf.csiro.au/difx@10922 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/utilities/trunk/vdifsim/TODO
+++ b/utilities/trunk/vdifsim/TODO
@@ -15,11 +15,14 @@ TODO
 
 * Consider horizon
 
+* Add antenna-based defects
+  - bandpass features
+  - clock errors
+  - packet loss / invalid packets
+
 * Support complex-valued VDIF output
 
 * Respect thread-id included in the format specifier
-
-* Integrate with difxmessage?
 
 * Add polarization leakage
 
@@ -39,6 +42,9 @@ STRETCH GOALS
 
 
 RESOLVED ISSUES
+
+X Integrate with difxmessage
+  - more integration still possible
 
 X integrate with MPI
   - option 1: simply parallelize across .input files
