--- a/applications/vex2difx/trunk/ChangeLog
+++ b/applications/vex2difx/trunk/ChangeLog
@@ -1,6 +1,7 @@
 Version 3.0.1
 -------------
 * Fix for datastream to antenna mapping when not sorting antennas
+* oms2v2d: add mode to generate .v2d file that is useful for use with vdifsim
 
 Version 3.0.0
 -------------
