--- a/applications/difx2fits/trunk/ChangeLog
+++ b/applications/difx2fits/trunk/ChangeLog
@@ -1,8 +1,9 @@
 Version 3.8.0
 * Post DiFX-2.8
 * Remove restrictions on max number of datastreams
-* Fix some possible memory leaks in cases where there are sometimes no pulse call tones.
+* Fix some possible memory leaks in cases where there are sometimes no pulse cal tones.
 * Streamline some logic in ML and MC tables (and fix incorrect use of ant2dsId[] in both cases)
+* Improve logical flow of sniffer; do proper 2-D interpolation.
 
 Version 3.7.0
 * Post DiFX-2.6
