--- a/applications/difx2fits/trunk/ChangeLog
+++ b/applications/difx2fits/trunk/ChangeLog
@@ -6,6 +6,7 @@ Version 3.8.0
 * Improve logical flow of sniffer; do proper 2-D interpolation.
 * Sniffer: do two-pass FFT; fringe fit quality seems equivalent to that in AIPS now  
 * Add external utility (apd2antenna) that converts .apd file into antenna-based quantities
+* Sniffer: option to write out bandpass
 
 Version 3.7.0
 * Post DiFX-2.6
