mk6mon update slot count for Mark6StatusMessage
git-svn-id: https://svn.atnf.csiro.au/difx@10961 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/difxmessage/trunk/ChangeLog
+++ b/libraries/difxmessage/trunk/ChangeLog
@@ -1,6 +1,7 @@
 Version 2.8.0
 ~~~~~~~~~~~~~
 * Version bump prior to DIFX-2.8 branching, Nov 4, 2022
+* mk6mon update slot count for Mark6StatusMessage parsing
 
 Version 2.7.0
 ~~~~~~~~~~~~~
