Updating trunk to 2.0.5 version; see changelogs.
This passed some minimal testing, but more changes
are likely in the coming weeks...then the resulting
version will be pushed to 2.8 for the eventual 2.8.2.


git-svn-id: https://svn.atnf.csiro.au/difx@10974 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/polconvert/trunk/src/Changelog
+++ b/applications/polconvert/trunk/src/Changelog
@@ -1,4 +1,10 @@
-v2.0.4
+v2.0.5
+- reconciled version, on DIFX trunk, May 23, 2023.
+
+v2.0.4 
+- Normalized python code (spaces).
+- Added new features to VGOS mode (UVTaper, multi-scan fitting, etc.)
+- Corrected bugs in PolGainSolve (bad rate estimates degraded solution quality).
 - added options for variable table names
 - starting another round of reconciliation
 
