oms2v2d: don't require DIFX_BASE to be set
git-svn-id: https://svn.atnf.csiro.au/difx@10985 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/vex2difx/trunk/ChangeLog
+++ b/applications/vex2difx/trunk/ChangeLog
@@ -2,6 +2,7 @@ Version 3.0.1
 -------------
 * Fix for datastream to antenna mapping when not sorting antennas
 * oms2v2d: add mode to generate .v2d file that is useful for use with vdifsim
+* oms2v2d: do not require DIFX_BASE to be set
 
 Version 3.0.0
 -------------
