--- a/libraries/mark6sg/trunk/ChangeLog
+++ b/libraries/mark6sg/trunk/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.0.4
+* mk6gather: append option no longer experimental
+
 Version 2.0.3
 * Post DiFX-2.6
 * add env var MARK6_META_ROOT for entirely module-free playback
