Option to apply bandpass when running difx2fits.  Currently lightly tested -- use at your own risk.
git-svn-id: https://svn.atnf.csiro.au/difx@11009 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/difx2fits/trunk/ChangeLog
+++ b/applications/difx2fits/trunk/ChangeLog
@@ -8,6 +8,8 @@ Version 3.8.0
 * Add external utility (apd2antenna) that converts .apd file into antenna-based quantities
 * Sniffer: option to write out bandpass
 * Add external utility (bp2antenna) that converts .bandpass file into antenna-based quantities with possibility to smooth in frequency
+* Clean up and fix some logic related to diagostic UV dumping
+* Add option to apply a complex bandpass prior to writing .FITS file.  see top of src/bandpass.h for some additional info. 
 
 Version 3.7.0
 * Post DiFX-2.6
