--- a/applications/difx2fits/trunk/ChangeLog
+++ b/applications/difx2fits/trunk/ChangeLog
@@ -2,6 +2,7 @@ Version 3.8.0
 * Post DiFX-2.8
 * Remove restrictions on max number of datastreams
 * Fix some possible memory leaks in cases where there are sometimes no pulse cal tones.
+* Fixed the --relabelCircular option
 * Streamline some logic in ML and MC tables (and fix incorrect use of ant2dsId[] in both cases)
 * Improve logical flow of sniffer; do proper 2-D interpolation.
 * Sniffer: do two-pass FFT; fringe fit quality seems equivalent to that in AIPS now  
