--- a/applications/difxcalc11/trunk/ChangeLog
+++ b/applications/difxcalc11/trunk/ChangeLog
@@ -1,3 +1,8 @@
+11.1.0
+------
+* Post DiFX-2.8
+* Add Y3 (and Y4 for future option) to ocean tables
+
 11.0.3
 ------
 * Allow to build outside the DiFX environment
