--- a/applications/difx2fits/trunk/ChangeLog
+++ b/applications/difx2fits/trunk/ChangeLog
@@ -10,7 +10,13 @@ Version 3.8.0
 * Sniffer: option to write out bandpass
 * Add external utility (bp2antenna) that converts .bandpass file into antenna-based quantities with possibility to smooth in frequency
 * Clean up and fix some logic related to diagostic UV dumping
-* Add option to apply a complex bandpass prior to writing .FITS file.  see top of src/bandpass.h for some additional info. 
+* EXPERIMENTAL: Add option to apply a complex bandpass prior to writing .FITS file.  see top of src/bandpass.h for some additional info. 
+* EXPERIMENTAL: Add option to apply a delay (as function of time and subband) from a .aapd file prior to writing .FITS file.
+  - This is intended for diagnostic purposes only
+  - There is no accountability for the applied corrections.
+    - As a consequence of this, decorrelation corrections cannot be done properly.
+    - Derived total delays are _not_ invariant to this
+* Create a .channels file that lists the frequency set as a function of time.
 
 Version 3.7.0
 * Post DiFX-2.6
