--- a/libraries/difxio/trunk/ChangeLog
+++ b/libraries/difxio/trunk/ChangeLog
@@ -2,6 +2,7 @@
 * Post DiFX 2.8
 * New function DifxInputGetMaxDatastreamsPerAntenna()
 * Add all VLA pads to antenna list
+* Add antenna memberships (not complete) and membership test functions
 
 3.7.0
 * Post DiFX 2.6
