Adopting the standard DiFX install.
git-svn-id: https://svn.atnf.csiro.au/difx@11085 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/espresso/trunk/ChangeLog
+++ b/applications/espresso/trunk/ChangeLog
@@ -1,5 +1,10 @@
 Version 2.8
 ~~~~~~~~~~~~~
+* drop pretence of python2 support everywhere
+* standardise the install process
+
+Version 2.8
+~~~~~~~~~~~~~
 * python3
 * Support execution from a singularity/docker image (split espresso.py into two parts - espressoprep.py and espressolaunch.py)
 * fsclock.py extracts clocks from FS log files.
