Initial support (untested) for double-sideband complex
git-svn-id: https://svn.atnf.csiro.au/difx@11106 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/utilities/trunk/vdifsim/TODO
+++ b/utilities/trunk/vdifsim/TODO
@@ -17,10 +17,10 @@ TODO
 
 * Add antenna-based defects
   - bandpass features
-  - clock errors
-  - packet loss / invalid packets
+  x clock errors
+  x packet loss / invalid packets
 
-* Support complex-valued VDIF output
+x Support complex-valued VDIF output
 
 * Respect thread-id included in the format specifier
 
