--- a/applications/polconvert/src/Changelog
+++ b/applications/polconvert/src/Changelog
@@ -2,6 +2,7 @@ v2.0.7
 - progress on the merger between CASA and standalone cases
 - argument reconciliation between the two branches (task* and CASA*)
 - transitioning to have task_polconvert invoke polconvert_CASA.py
+- minor edits to reconcile to DiFX at its SVN->GIT transition
 
 v2.0.6
 - fixes for XYfparang issue
@@ -24,6 +25,7 @@ v2.0.4
 v2.0.3
 - Synchronized ALMA/non-ALMA buildables; python codes still not unified
 - This version appears to reproduce the ALMA behaviors of v1.8.5
+- This version pushed to DiFX 2.8 and tagged as DiFX 2.8.1
 
 v2.0b
 - Improved the GCPFF algorithm. Implemented the interface for CASA 6.
