--- a/libraries/vdifio/ChangeLog
+++ b/libraries/vdifio/ChangeLog
@@ -3,6 +3,7 @@ Version 1.6
 * Post DiFX-2.8
 * vdifbstate: add option to look at only even or odd samples
 * filterVDIF: fix fclose on null pointer
+* vdiffile: fix calculation for end time
 
 Version 1.5
 ~~~~~~~~~~~
