--- a/mpifxcorr/ChangeLog
+++ b/mpifxcorr/ChangeLog
@@ -3,7 +3,7 @@ Version 2.9
 * Fix missing/broken autocorrelations (ported to DiFX 2.8)
 * Fix for cross-polar autocorrelation weights (ported to DiFX 2.8)
 * Support for IPP 2021.*
-
+* Support fractional-spaced Phase Cal such as Korean photonic 700/9 MHz
 
 Version 2.8
 ~~~~~~~~~~~
