--- a/applications/vex2difx/ChangeLog
+++ b/applications/vex2difx/ChangeLog
@@ -6,6 +6,7 @@ Version 3.1.0
 * oms2v2d: automatically add filelist files if found in current directory
 * Fix stale pointer to source after manipulating multi-phase-center bits
 * New ANTENNA parameter phaseCalIntDivisor for fractional spacings (phaseCalInt[MHz]/phaseCalIntDivisor)
+* New utility: mk6filelist, a simplified form of mk62v2d which does not require or modify the .v2d file.
 
 Version 3.0.0
 -------------
