vdifsim: fix issue where one extra second of data is generated

--- a/utilities/vdifsim/ChangeLog
+++ b/utilities/vdifsim/ChangeLog
@@ -1,3 +1,7 @@
+Version 0.1.1
+-------------
+* Fix issue where the program generates 1 second too much data
+
 Version 0.1
 -----------
 * First version -- still in development
