--- a/applications/vex2difx/ChangeLog
+++ b/applications/vex2difx/ChangeLog
@@ -4,6 +4,7 @@ Version 3.1.0
 * oms2v2d: add mode to generate .v2d file that is useful for use with vdifsim
 * oms2v2d: do not require DIFX_BASE to be set
 * oms2v2d: automatically add filelist files if found in current directory
+  - look for <stn>.filelist as well as <prj>.<stn>.filelist
 * oms2v2d: option (-x) to exclude antennas that do not have filelist files present
 * Fix stale pointer to source after manipulating multi-phase-center bits
 * New ANTENNA parameter phaseCalIntDivisor for fractional spacings (phaseCalInt[MHz]/phaseCalIntDivisor)
