--- a/applications/difx2mark4/ChangeLog
+++ b/applications/difx2mark4/ChangeLog
@@ -2,6 +2,12 @@ Version 1.7
 ~~~~~~~~~~~
 * rjc 2020.6.26
 * fix parallactic angle bug in first t303 record
+* improved frequency table bookkeeping, avoiding duplicates, registering outputbands
+* fixed bug in '-w <bandwidth MHz>' that dropped all zooms at edges of parent bands
+* re-fixed issue of '-d' (or *.input) not working due to ignored DiFX antenna Id remap
+* fixed a normalization issue where autocorrelations were not looked up by their
+  actual DiFX freq IDs, stemming from vex2difx behaviour that creates own freq IDs for
+  every station that has a differing PCal spacing
 * Version for DiFX-2.8, Nov 4, 2022
 
 Version 1.6
