--- a/libraries/difxio/ChangeLog
+++ b/libraries/difxio/ChangeLog
@@ -3,6 +3,7 @@
 * New function DifxInputGetMaxDatastreamsPerAntenna()
 * Add all VLA pads to antenna list
 * Add antenna memberships (not complete) and membership test functions
+* Remap frequency setups that are equivalent to appropriate IFs (prevent lost autocorrs when mixing pulse cal setups)
 
 3.7.0
 * Post DiFX 2.6
