Fix spelling, remove SVN headers, apply codif syncword fix

--- a/libraries/mark5access/ChangeLog
+++ b/libraries/mark5access/ChangeLog
@@ -2,6 +2,8 @@ Version 1.7
 * Post DiFX-2.8
 * Add option to m5bstate to look only at even or odd samples
 * m5pcal: can read from stdin
+* Remove SVN headers in files
+* Fix some spelling
 
 Version 1.6
 * Post DiFX-2.6
