--- a/applications/vex2difx/ChangeLog
+++ b/applications/vex2difx/ChangeLog
@@ -11,6 +11,7 @@ Version 3.1.0
 * New ANTENNA parameter phaseCalIntDivisor for fractional spacings (phaseCalInt[MHz]/phaseCalIntDivisor)
 * New utility: mk6filelist, a simplified form of mk62v2d which does not require or modify the .v2d file.
 * Update wiki to ATNF -- note that even this will be old soon and the new github link will replace it.
+* Allow "NONE" data format.  This was allowed in previous vex parser version, but got lost when vex2 was added.
 
 Version 3.0.0
 -------------
