--- a/doc/userguide/difx_endmatter.tex
+++ b/doc/userguide/difx_endmatter.tex
@@ -34,6 +34,7 @@ If I left anyone of this list that should be there, and there are probably sever
 \bibitem{difx}
 	{\it DiFX: A software correlator for very long baseline interferometry using multi-processor computing environments}, Deller, A.~T., Tingay, S.~J., Bailes, M. \& West, C., 2007, PASP 119, 318, \url{http://xxx.lanl.gov/abs/astro-ph/0702141}
 \bibitem{aips102}
+\bibitem{difx2}
 	{\it DiFX2: A more flexible, efficient, robust and powerful software correlator}, A.\ T.\ Deller, W.\ F.\ Brisken, C.\ J.\ Phillips, J.\ Morgan, W.\ Alef, R.\ Cappallo, E.\ Middelberg, J.\ Romney, H.\ Rottmann, S.\ J.\ Tingay, R.\ Wayth, 2011, PASP, 123, 275, \url{http://arxiv.org/abs/1101.0885}
 	{\it The FITS Interferometry Data Interchange Format}, Flatters, C., AIPS Memo 102, \url{ftp://ftp.aoc.nrao.edu/pub/software/aips/TEXT/PUBL/AIPSMEMO102.PS}
 \bibitem{aips114}
